<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PathFinderSpells!</string>
    <string name="app_name">Pathfinder - Sorts</string>

<string name="no_spells">Aucun sort</string>


<string name="confirm">Valider</string>
<string name="school">Ecole :</string>
<string name="level">Niveau :</string>
<string name="casting_time">Temps d\'incantation :</string>
<string name="components">Composantes :</string>
<string name="range">Portée :</string>
<string name="target">Cible :</string>
<string name="duration">Durée :</string>
<string name="saving">Jet de sauvegarde :</string>
<string name="spell_resistance">Résistance à la magie :</string>
<string name="magician">Ens/Mag</string>
<string name="bard">Bard</string>
<string name="druid">Dru</string>
<string name="priest">Prê</string>
<string name="paladin">Pal</string>
<string name="striker">Rôd</string>
<string name="comment">Notes</string>
<string name="isbookmark">Favoris</string>
<string name="isknown">Connu</string>
<string name="isinmemory">Mémo</string>

<string name="search_hint">Rechercher un sort</string>
<string name="cancel">Annuler</string>
<string name="branch">Branche :</string>
<string name="register">Registre :</string>
<string name="search">Rechercher</string>
<string name="className">Classe</string>
<string name="sort">Trier</string>
<string name="menu_alpha">Alphabétique</string>
<string name="menu_level">Niveau</string>
<string name="menu_school">Ecole</string>
<string name="menu_all_classes">Toutes les classes</string>
<string name="menu_magician">Magicien/Ensorceleur</string>
<string name="menu_priest">Prêtre</string>
<string name="menu_paladin">Paladin</string>
<string name="menu_bard">Barde</string>

<string name="menu_druid">Druide</string>
<string name="menu_striker">Rôdeur</string>
<string name="menu_school_level">Niveau par école</string>
<string name="about">A propos</string>
</resources>
