<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">
	
	<ScrollView 
android:id="@+id/scrllvwNo1" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"> 

<LinearLayout 
android:paddingRight = "10dip"
android:orientation="vertical" 
android:layout_width="fill_parent"
android:layout_height="wrap_content"> 
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/detail_name"
				android:text="@+id/detail_name"
				android:textStyle="bold"
				android:gravity="center_vertical|center_horizontal"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" 
				android:textSize="20sp"			
				android:layout_weight="1" />	
				<ImageView android:id="@+id/detail_is_bookmark"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"			
					android:padding="3dip"				
					android:src="@drawable/nofavoris" />				
		
	</LinearLayout>		
	
	<LinearLayout
android:id="@+id/horizontalLine"
android:layout_width="fill_parent"
android:layout_height="1dip"
android:background="#848484"
/>
	
	
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content"					
					android:layout_marginRight="5sp"
					android:text="@string/school" />
				<TextView android:id="@+id/detail_school"				
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
			</LinearLayout>						
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/level" />
				<TextView android:id="@+id/detail_level" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />			
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_casting_time">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/casting_time" />
				<TextView android:id="@+id/detail_casting_time" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
				
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_components">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/components" />
				<TextView android:id="@+id/detail_components" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
				
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_range">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/range" />
				<TextView android:id="@+id/detail_range" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
				
			</LinearLayout>			
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_target">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/target" />
				<TextView android:id="@+id/detail_target" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
				
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_duration">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/duration" />
				<TextView android:id="@+id/detail_duration" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
				
			</LinearLayout>	
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_saving">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/saving" />
				<TextView android:id="@+id/detail_saving" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
				
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_spell_resistance">
					
				<TextView android:layout_width="wrap_content"
					android:textStyle="bold"
					android:layout_height="wrap_content" 
					android:layout_marginRight="5sp"
					android:text="@string/spell_resistance" />
				<TextView android:id="@+id/detail_spell_resistance" 
				  android:layout_width="wrap_content"
					android:layout_height="wrap_content" />	
				
			</LinearLayout>	
		
						
	
	<TextView android:id="@+id/detail_full_description"		
		android:layout_marginTop = "5sp"
		android:layout_marginBottom = "5sp"
		android:text="@+id/detail_full_description"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
</LinearLayout>
</ScrollView>

</LinearLayout>